more amusing places for vecations

--- a/index.html
+++ b/index.html
@@ -7,17 +7,32 @@
 <link rel="stylesheet" href="css/app.css">
 </head>
 <body>
+	<div>Here you are my favorit distenations 
+	<div>   to travel to when i am in a vecation 
+	<div>   i think what i have in mind about these
+	<div>   places is stoneshing .</div>
+	</div>  
 
 <div class="container">
 <div class="destination-container">
 <div class="destination" id="florida">
-<h2>Florida</h2>
+<h1>Florida</h1>
 </div>
 
 <div class="destination" id="paris">
-<h2>Paris</h2>
+<h1>Paris</h1>
 </div>
+
+<div class="destination" id="Cairo">
+<h1>Cairo</h1>
 </div>
+
+<div class="destination" id="alexanderyiah">
+<h1>Alexanderyiah</h1>
+</div>
+
+<div class="destination" id="Mansourah">
+<h1>Mansourah</h1>
 </div>
 
 </body>
